# LungVisionAI

./: .dockerignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  server.py
model/: history.pkl
notebook/: main.ipynb
static/: index.html  script.js  style.css
