[project]
name = "lungvisionai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.4",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "python-multipart>=0.0.20",
    "tensorflow-cpu>=2.20.0",
    "uvicorn>=0.38.0",
]
